--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4515,6 +4515,26 @@ color: #C8C7CC;
     float: right;
 }
 
+.test-contact-btn {
+    background-color: var(--purple-2);
+    height: 30px;
+    margin-bottom: 0px;
+    color: var(--white-0) !important;
+    float: right;
+    cursor: pointer;
+    margin-left: 12px;
+}
+
+.test-contact-btn .send-icon{
+    background-image: url(../assets/send-icon.svg);
+    height: 15px;
+    background-size: 100%;
+    width: 15px;
+    background-repeat: no-repeat;
+    margin-bottom: 0px;
+    margin-right: 6px;
+}
+
 #alerting input,.add-label-container{
     height: 32px;
 }
