--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5374,3 +5374,7 @@ input.form-control {
     color: var(--component-text-color) !important;
     width: 100px;
 }
+
+#index-del-btn-traces{
+    background-image: none;
+}
