--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5354,3 +5354,45 @@ input.form-control {
 .tippy-box[data-placement^='right'] > .tippy-arrow::before {
     border-right-color:var(--side-nav-bg-color-regular);
 }
+.border-danger {
+    border: 2px solid red !important; /* Adjust border style as needed */
+    background-color: rgb(252, 234, 234) !important;
+}
+.addrulepopupOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* semi-transparent black background */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+
+  .addrulepopupContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+  }
+  #addrule-cancel-btn {
+    background: #A9A9A9; 
+    color: #fff;
+    margin-right: 10px;
+    border: none;
+    padding: 2%;
+    border-radius: 5px;
+}
+
+
+  #addrule-save-btn {
+    background:var(--btn-regular-bg-color) ; /* similar gray color as in the image */
+    color: #fff;
+    border: none;
+    padding: 2%;
+    border-radius: 5px;
+
+  }
