--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -1913,6 +1913,16 @@ div.dts div.dataTables_scrollBody table {
     background-size: contain;
 }
 
+#viewbutton {
+    background-image: url(../assets/view-icon.svg);
+    height: 14px;
+    width: 19px;
+    cursor: pointer;
+    background-color: transparent;
+    border-width: 0;
+    padding: 0px;
+    background-size: contain;
+}
 
 #duplicateButton{
     background-image: url(../assets/dashboard-duplicate-icon.svg);
@@ -4505,26 +4515,6 @@ color: #C8C7CC;
     float: right;
 }
 
-.test-contact-btn {
-    background-color: var(--purple-2);
-    height: 30px;
-    margin-bottom: 0px;
-    color: var(--white-0) !important;
-    float: right;
-    cursor: pointer;
-    margin-left: 12px;
-}
-
-.test-contact-btn .send-icon{
-    background-image: url(../assets/send-icon.svg);
-    height: 15px;
-    background-size: 100%;
-    width: 15px;
-    background-repeat: no-repeat;
-    margin-bottom: 0px;
-    margin-right: 6px;
-}
-
 #alerting input,.add-label-container{
     height: 32px;
 }
@@ -5103,10 +5093,11 @@ input.form-control {
     background: var(--top-refresh-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
     background-size: 46% !important;
 }
-#delbutton.default-dashboard-delete {
-    background-image:none;
-}
 
+#delbutton.default-dashboard-delete:hover {
+    background-image: url(../assets/dark-delete-icon-regular.svg);
+    cursor: not-allowed;
+}
 #data-ingestion .myOrg-heading{
     font-size: 16px;
     margin-top: 20px;
@@ -5363,7 +5354,6 @@ input.form-control {
 .tippy-box[data-placement^='right'] > .tippy-arrow::before {
     border-right-color:var(--side-nav-bg-color-regular);
 }
-
 .nav-metrics {
     position: relative;
 }
@@ -5418,10 +5408,10 @@ ul.metrics-dropdown li, ul.metrics-dropdown li a{
 .metrics-dropdown li {
     padding: 10px;
 }
-.metrics-dropdown li.di {
+.metrics-dropdown li.metrics-summary-metrics-link {
     padding-left: 20px; /* Additional padding for left indent */
 }
-.summary {
+.metric-summary {
     padding-bottom: 1%;
   display:flex;
   flex-direction: column;
@@ -5430,35 +5420,21 @@ ul.metrics-dropdown li, ul.metrics-dropdown li a{
   scrollbar-width: none; 
   -ms-overflow-style: none; 
 }
-.head{
+.metric-summary-head{
   margin-top: 0.5%;
-}
-
-
-
-
-.firstdrop {
-  padding: 0;
-  margin-top: 0.5%;
-}
-
-.firstdrop select {
-  padding: 4% !important;
-  border-radius: 5px;
-  border: 0.3px solid rgb(181, 181, 181);
 }
 
 .icon {
   visibility: hidden;
 }
 
-.searchcontainer{
+.metric-summary-searchcontainer{
   display:flex !important;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.search1{
+.metric-summary-search{
   width:100%;
 }
 
@@ -5477,20 +5453,4 @@ ul.metrics-dropdown li, ul.metrics-dropdown li a{
   margin: auto;
   float: left;
   width: 95%;
-=======
-
-#error-popup .fas{
-    font-size: 16px;
-    margin-right: 5px;
-}
-
-#okay-button{
-    background: var(--component-bg-color);
-    color: var(--component-text-color) !important;
-    width: 100px;
-}
-
-#index-del-btn-traces{
-    background-image: none;
-
 }
