display ingestion sources as tabs instead of dropdown (#1163)
* display ingestion sources as tabs instead of dropdown

* fix css, address PR comments

* remove basic Info div.

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4197,6 +4197,9 @@ color: #C8C7CC;
     margin: 20px;
     margin-bottom: 10px;
 }
+.ingestion-nav-tab{
+    font-size: 18px;
+}
 
 .usage-stats{
     display:flex;
@@ -5373,6 +5376,19 @@ input.form-control {
     background: var(--component-bg-color);
     color: var(--component-text-color) !important;
     width: 100px;
+}
+.ingest-inner-container {
+    font-size: 14px;
+    padding: 30px;
+    height: 100%;
+}
+.ingest-inner-container  .ui-tabs-panel{
+    margin-top: 50px;
+    border: none;
+}
+
+#sample-data{
+    display: flex;
 }
 
 #index-del-btn-traces{
