fixed footer, fixed hover, different color for chart, fixed position of chart

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -866,7 +866,8 @@ body {
 #cstats-app-footer {
     float: right;
     font-size: 0.7rem;
-    width: 126px;
+    width: 100%;
+    text-align: right;
     height: 23px;
     font-style: normal;
     font-weight: 500;
