--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -30,9 +30,9 @@
     --fw-500: 500;
     --fw-900: 900;
 
-    --color-normal: #53DB6E;
-    --color-pending: #F4BB20;
-    --color-firing: #F55759;
+    --color-normal: #40C463;
+    --color-pending: #FB9E04;
+    --color-firing: #EF364F;
 
     --lavender-1: #B4A6E6;
     --lavender-2: #826CE1;
@@ -5380,10 +5380,29 @@ input.form-control {
 
   .addrulepopupContent {
     background: #fff;
-    padding: 20px;
+    
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 500px;
+  }
+  .addrulepopupContent .header{
+    font-size: 18px;
+    text-align: left;
+    font-family: 'DINpro';
+    font-weight: 600;
+    padding: 5%;
+    background-color: #e7e7e7;
+    border-radius: 10px;
+
+  }
+  .addrulepopupContent .popupcont{
+    padding:5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color:rgb(96, 96, 96);
+    font-weight: 600;
+    border-bottom: 1px solid rgb(207, 207, 207);
   }
   #addrule-cancel-btn {
     background: #A9A9A9; 
@@ -5391,6 +5410,7 @@ input.form-control {
     margin-right: 10px;
     border: none;
     padding: 2%;
+    width:100px;
     border-radius: 5px;
 }
 
@@ -5399,6 +5419,7 @@ input.form-control {
     background:var(--btn-regular-bg-color) ; /* similar gray color as in the image */
     color: #fff;
     border: none;
+    width:100px;
     padding: 2%;
     border-radius: 5px;
 
