--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -17,7 +17,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
- :root {
+
  :root {
     --black: #000;
     --white: #fff;
@@ -5127,6 +5127,7 @@ input.form-control {
 }
 #delbutton.default-dashboard-delete {
     background-image:none;
+}
 #delbutton.default-dashboard-delete {
     background-image:none;
 }
