--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -4347,7 +4347,10 @@ color: #C8C7CC;
     background: var(--component-bg-color);
     padding: 0px 20px;
 }
-.add-alert-form,.add-contact-form{
+.add-alert-form{
+    width: 100%;
+}
+.add-contact-form{
     width: 70%;
 }
 
@@ -4391,7 +4394,7 @@ color: #C8C7CC;
 
 .evaluation-container input{
     margin-left: 40px;
-    width: 70px;
+    width: 110px;
     margin-right: 10px;
 }
 .label-container{
