UI Support for Creating Metrics Alerts (#1172)
* UI Support for Creating Metrics Alerts

* Metrics CSS Fix

* Both alerts and metrics-explorer working

* Rearranging html element

* Update parsing function to handle edge cases

* nit

* Address Comments

* Fixed Variable Name & Fixed Button Placement

--- a/static/css/metrics-explorer.css
+++ b/static/css/metrics-explorer.css
@@ -133,7 +133,7 @@ input:checked + .slider:before {
     border-color:  #2D69BC;
 }
 .formula-box .formula.error-border{
-    border: 1px solid #EB364B;
+    border: 1px solid #EB364B !important;
     border-left: none ;
 }
 .formula-arrow{
@@ -187,15 +187,17 @@ input:checked + .slider:before {
 }
 .tag-container,.value-container {
     min-width: 200px;
+    background-color: var(--input-box-bg-color);
 }
 
 .everywhere,
 .everything {
-    height: 28px;
-    border: none;
+    height: 28px !important;
+    border: none !important;
     border-radius: 0px;
     flex-grow: 1; 
     padding: 0 !important;
+    background-color: var(--input-box-bg-color) !important;
 }
 
 .ui-helper-hidden-accessible {
@@ -212,9 +214,9 @@ input:checked + .slider:before {
     cursor: pointer;
 }
 .metrics-query .query-name{
-    background-color: var(--white);
+    background-color: var(--input-box-bg-color);
     border-radius: 5px 0 0 5px;
-    color: var(--black-3);
+    color: var(--text-color);
     font-weight: bold;
     cursor: pointer;
 }
@@ -222,15 +224,15 @@ input:checked + .slider:before {
 .metrics-query .metrics{
     min-width: 230px;
     width: auto !important;
-    background-color: var(--selected-filter-yellow);
+    background-color: var(--selected-filter-yellow) !important;
 }
 .metrics-query .metrics:focus{
-    background-color: var( --container-focus-bg-color );
+    background-color: var( --container-focus-bg-color ) !important;
     outline: 1px solid #2D69BC;
 }
 .metrics-query .agg-function{
     width: 90px !important;
-    background-color: var(--drop-down-btn-bg-regular);
+    background-color: var(--drop-down-btn-bg-regular) !important;
 }
 .metrics-query .agg-function:focus{
     background-color: var(--drop-down-btn-bg-regular);
