--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -19,9 +19,6 @@
 
 :root {
     --black: #000;
-        --color-normal: #53DB6E;
-    --color-pending: #F4BB20;
-    --color-firing: #F55759;
     --white: #fff;
     --error: #f00;
     --error-trace: #E93125;
@@ -5379,34 +5376,41 @@ input.form-control {
   }
 
   .addrulepopupContent {
-    background: #fff;
-    
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
+    background-color: var(--ui-widget-bg-color);
+    border-radius: 8px;
+    border: 1px solid var(--ui-widget-border-color);
+    padding: 25px;
+    position: absolute;
+    top:32%;
+    left:35%;    color: var(--text-color);
+    font-size: 1em;
+    height: fit-content;
+    width: 464px !important;
+    z-index: 10;
   }
   .addrulepopupContent .header{
     font-size: 18px;
     text-align: left;
     font-family: 'DINpro';
     font-weight: 600;
-    padding: 5%;
-    background-color: #e7e7e7;
     border-radius: 10px;
+    color: var(--text-color);
+   
+    font-weight: bold;
+    font-size: 18px;
 
   }
-  .addrulepopupContent .popupcont{
-    padding:5%;
+  .addrulepopupContent .popupcont{    
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color:rgb(96, 96, 96);
+    color: var(--text-color);
     font-weight: 600;
-    border-bottom: 1px solid rgb(207, 207, 207);
+    
   }
   #addrule-cancel-btn {
-    background: #A9A9A9; 
-    color: #fff;
+    background: var(--component-bg-color);
+    color: var(--component-text-color);
     margin-right: 10px;
     border: none;
     padding: 2%;
@@ -5415,12 +5419,40 @@ input.form-control {
 }
 
 
-  #addrule-save-btn {
-    background:var(--btn-regular-bg-color) ; /* similar gray color as in the image */
-    color: #fff;
-    border: none;
-    width:100px;
-    padding: 2%;
-    border-radius: 5px;
 
+
+#addrule-save-btn {
+    display: inline-flex; /* Use flexbox for alignment */
+    align-items: center; /* Center items vertically */
+    background:var(--btn-regular-bg-color) ; 
+    justify-content: center;
+    color: #ffffff; /* Text color */
+    border: none;
+    padding: 8px 16px; /* Adjust padding as needed */
+    font-size: 16px; /* Adjust font size as needed */
+    cursor: pointer;
+    text-align: center;
+    width:100px;
+    gap:5px;
+    text-decoration: none;
+    border-radius: 4px; /* Rounded corners */
+    transition: background-color 0.3s ease;
+}
+
+#addrule-save-btn:hover {
+    background-color: #4F38CC; /* Darker background color on hover */
+}
+
+#addrule-save-btn img {
+    width: 15px; /* Adjust icon width */
+    height: 15px; /* Adjust icon height */
+    margin-right: 8px; /* Adjust margin as needed */
+}
+
+  .btncontainer{
+    display:flex;
+    flex-direction:row;
+    justify-content:right;
+    align-content:right;
+    padding-top:3%;
   }
