--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5476,6 +5476,12 @@ ul.metrics-dropdown li, ul.metrics-dropdown li a{
 .icon {
   visibility: hidden;
 }
+#contact-point-error ,#metric-error{
+    color: #7963d8;
+    display: none;
+    font-size: 13px;
+    margin-bottom: 6px;
+}
 
 .metric-summary-searchcontainer{
     display:flex !important;
